<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#CCCCCC"
    android:gravity="center">

    <LinearLayout
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@android:color/white"
        android:padding="24dp"
        android:layout_margin="16dp"
        android:elevation="4dp"
        android:layout_gravity="center"
        android:backgroundTint="#FFFFFF"
        android:clipToPadding="false"
        android:gravity="center"
        android:layoutDirection="ltr"
        android:translationZ="4dp"
        android:layout_marginBottom="24dp"
        android:layout_marginTop="24dp"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:backgroundTintMode="src_in">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name"
            android:textColor="#000000"
            android:layout_marginTop="8dp"/>

        <EditText
            android:id="@+id/etName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:hint="@string/value"
            android:padding="10dp"
            android:textColor="#C88A8A8A" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#000000"
            android:text="@string/email" />
        <EditText
            android:id="@+id/etEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/value"
            android:textColor="#C88A8A8A"
            android:inputType="textEmailAddress"
            android:padding="10dp"
            android:layout_marginBottom="8dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#000000"
            android:text="@string/password" />
        <EditText
            android:id="@+id/etPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/value"
            android:inputType="textPassword"
            android:textColor="#C88A8A8A"
            android:padding="10dp"
            android:layout_marginBottom="8dp"
            android:drawableEnd="@drawable/ic_visibility_off"
            android:drawablePadding="8dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#000000"
            android:text="@string/confirm_password_message" />

        <EditText
            android:id="@+id/etConfirmPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:hint="@string/value"
            android:textColor="#C88A8A8A"
            android:inputType="textPassword"
            android:drawableEnd="@drawable/ic_visibility_off"
            android:padding="10dp" />

        <!-- Button to show/hide password -->
        <Button
            android:id="@+id/btnShowPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/show_password"
            android:layout_marginBottom="3dp"
            android:layout_gravity="end"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_marginBottom="16dp">

            <Button
                android:id="@+id/btnUser"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/user"
                android:layout_marginEnd="8dp" />

            <Button
                android:id="@+id/btnAdmin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/admin" />

        </LinearLayout>

        <!-- Added TextView to inform user about email verification -->
        <TextView
            android:id="@+id/tvEmailVerificationMessage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/email_validation_message"
            android:layout_marginBottom="16dp"
            android:visibility="gone"
            android:textColor="#000000"/>

        <!-- Button to trigger sign-up action -->
        <Button
            android:id="@+id/btnSignUp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sign_up"
            android:backgroundTint="#222222"
            android:textColor="#FFFFFF"/>

    </LinearLayout>
</LinearLayout>