<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:background="#D3D3D3"
    android:padding="24dp">

    <LinearLayout
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@android:color/white"
        android:padding="24dp"
        android:elevation="6dp"
        android:gravity="center"
        android:clipToOutline="true"
        android:outlineProvider="background">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/change_password"
            android:textSize="18sp"
            android:textStyle="bold"
            android:gravity="center"
            android:layout_marginBottom="24dp"/>

        <EditText
            android:id="@+id/etCurrentPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/current_password"
            android:inputType="textPassword"
            android:padding="10dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="16dp"/>

        <EditText
            android:id="@+id/etNewPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/new_password"
            android:inputType="textPassword"
            android:padding="10dp"
            android:layout_marginBottom="16dp"/>

        <Button
            android:id="@+id/btnSaveChanges"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/save_changes"
            android:background="#222222"
            android:textColor="#FFFFFF"
            android:layout_marginBottom="16dp"/>

        <Button
            android:id="@+id/btnSubmitNewPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/submit_new_password"
            android:background="#222222"
            android:textColor="#FFFFFF"
            android:visibility="gone"/> <!-- Initially hidden -->

    </LinearLayout>
</LinearLayout>
