<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="20dp"
    android:background="@drawable/rounded_card"
    android:orientation="vertical"
    android:padding="30dp">

    <!-- Task Title -->
    <TextView
        android:id="@+id/tvTaskTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/task_title"
        android:textColor="#000000"
        android:textSize="30sp"
        android:textStyle="bold" />

    <!-- Task Status -->
    <TextView
        android:id="@+id/tvTaskStatus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:textColor="#000000"
        android:text="@string/status"
        android:textSize="20sp"
        android:textStyle="italic" />

    <!-- Task Due Date -->
    <TextView
        android:id="@+id/tvTaskDueDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/due_date"
        android:textColor="#000000"
        android:textSize="20sp" />
</LinearLayout>